package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "ConsumerRegPB";

message ConsumerReg {
    required string groupId = 1;  
    required string consumerId = 2;
    required string topic = 3;
}