package blackhole;

option java_package = "com.dp.blackhole.protocol.control";
option java_outer_classname = "StreamIDPB";

message StreamID {
    required string app_name = 1;
    required string app_server = 2;
}